minikube/mongo-community-operator/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo
  labels:
    app.kubernetes.io/name: mongo
    app.kubernetes.io/app: bpmn-mongodb-svc
    app.kubernetes.io/instance: bpmn-mongodb-svc
    app.kubernetes.io/version: "4.2.6"
    app.kubernetes.io/managed-by: vizual
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: dev-nginx
  rules:
    - host: "mongo.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bpmn-mongodb-svc
                port:
                  number: 27017
